--- a/simple-deploy.yml
+++ b/simple-deploy.yml
@@ -6,7 +6,12 @@ spec:
   selector:
     matchLabels:
       app: simple
-  replicas: 2 
+  replicas: 2
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+    type: RollingUpdate
   template:
     metadata:
       labels:
