--- a/simple-deploy.yml
+++ b/simple-deploy.yml
@@ -21,4 +21,11 @@ spec:
       - name: simple-java
         image: romajanlyi/simple-java-app:1.1
         ports:
-        - containerPort: 8080
+          - containerPort: 8080
+        readinessProbe:
+          failureThreshold: 3
+          httpGet:
+            port: 8080
+            path: /hello
+          periodSeconds: 10
+          timeoutSeconds: 1
