--- a/simple-deploy.yml
+++ b/simple-deploy.yml
@@ -27,5 +27,6 @@ spec:
           httpGet:
             port: 8080
             path: /hello
+          initialDelaySeconds: 10
           periodSeconds: 10
           timeoutSeconds: 1
