--- a/simple-deploy.yml
+++ b/simple-deploy.yml
@@ -43,5 +43,5 @@ spec:
             cpu: 1
             memory: "300Mi"
           requests:
-            cou: 1
+            cpu: 1
             memory: "100Mi"
