--- a/simple-deploy.yml
+++ b/simple-deploy.yml
@@ -40,8 +40,8 @@ spec:
           failureThreshold: 3
         resources:
           limits:
-            cpu: 1
+            cpu: 100m
             memory: "300Mi"
           requests:
-            cpu: 1
+            cpu: 50m
             memory: "100Mi"
