--- a/simple-deploy.yml
+++ b/simple-deploy.yml
@@ -9,8 +9,8 @@ spec:
   replicas: 4
   strategy:
     rollingUpdate:
-      maxSurge: 50%
-      maxUnavailable: 50%
+      maxSurge: 2
+      maxUnavailable: 2
     type: RollingUpdate
   template:
     metadata:
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: simple-java
-        image: romajanlyi/simple-java-app:for-update
+        image: romajanlyi/simple-java-app:1.8
         ports:
           - containerPort: 8080
         readinessProbe:
