--- a/simple-deploy.yml
+++ b/simple-deploy.yml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: simple-java
-        image: romajanlyi/simple-java-app:1.8
+        image: romajanlyi/simple-java-app:with-cm
         ports:
           - containerPort: 8080
         readinessProbe:
@@ -43,3 +43,10 @@ spec:
             memory: "300Mi"
           requests:
             memory: "100Mi"
+        volumeMounts:
+          - name: simple-spring-config
+            mountPath: /config
+      volumes:
+        - name: simple-spring-config
+          configMap:
+            name: simple-spring-config
