--- a/secret.yml
+++ b/secret.yml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: simple-secret
-data:
-  secret-word: SGVsbG8gc2VjcmV0
+stringData:
+  secret-word: Hello secret
 type: Opaque
