--- a/simple-service.yml
+++ b/simple-service.yml
@@ -5,8 +5,7 @@ metadata:
 spec:
   selector: 
     app: simple
-  type: NodePort  
   ports:
     - port: 80
       targetPort: 8080
-      nodePort: 32000
+  type: ClusterIp
