--- a/simple-service.yml
+++ b/simple-service.yml
@@ -5,7 +5,8 @@ metadata:
 spec:
   selector: 
     app: simple
+  type: NodePort
   ports:
     - port: 80
       targetPort: 8080
-  type: ClusterIP
+      nodePort: 32000
