--- a/ingress.yml
+++ b/ingress.yml
@@ -1,12 +1,18 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-hosts
+  name: ingress-simple
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx-example
   rules:
-    - host: www.romajan.net
-      http:
+    - http:
         paths:
-          - backend:
-              serviceName: simple-svc
-              servicePort: 80
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: simple-svc
+                port:
+                  number: 80
