--- a/ingress.yml
+++ b/ingress.yml
@@ -1,12 +1,15 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-hosts
+  name: ingress-simple
 spec:
   rules:
-    - host: www.romajan.net
-      http:
+    - http:
         paths:
-          - backend:
-              serviceName: simple-svc
-              servicePort: 80
+          - path: /simple-spring
+            pathType: Prefix
+            backend:
+              service:
+                name: simple-svc
+                port:
+                  number: 80
