--- a/ingress.yml
+++ b/ingress.yml
@@ -7,7 +7,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /
+          - path: /simple-spring
             pathType: Prefix
             backend:
               service:
