--- a/ingress.yml
+++ b/ingress.yml
@@ -5,7 +5,8 @@ metadata:
 spec:
   ingressClassName: contour
   rules:
-    - http:
+    - host: 194.67.90.157
+      http:
         paths:
           - path: /simple-spring
             pathType: Prefix
