--- a/ingress.yml
+++ b/ingress.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: contour
   rules:
-    - host: 194.67.90.157
+    - host: hello-romajan-spring
       http:
         paths:
           - path: /simple-spring
