--- a/secret.yml
+++ b/secret.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: simple-secret
+  namespace: simple
 stringData:
   secret-word: Hello secret
   secret-second-word: Hello 2-d word!
