--- a/configmap-main.yml
+++ b/configmap-main.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: simple-spring-config
+  namespace: simple
 data:
   application.yml: |
     hello-word: Hello
