--- a/mount-secret.yml
+++ b/mount-secret.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mount-secret
+  namespace: simple
 data:
   test.txt: |
     SGVsbG8gaXQncyBtb3VudGluZyBzZWNyZXQK
