--- a/kafka/zookeeper-svc.yaml
+++ b/kafka/zookeeper-svc.yaml
@@ -6,8 +6,10 @@ metadata:
   name: zookeeper-service
   namespace: kafka
 spec:
+  type: NodePort
   ports:
     - name: zookeeper-port
+      nodePort: 30181
       port: 2181
       targetPort: 2181
   selector:
