--- a/kafka/zookeeper-svc.yaml
+++ b/kafka/zookeeper-svc.yaml
@@ -1,16 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: zookeeper-service
-  name: zookeeper-service
-  namespace: kafka
+  name: zookeeper-svc
 spec:
-  type: NodePort
   ports:
-    - name: zookeeper-port
-      nodePort: 30181
+    - name: client
       port: 2181
-      targetPort: 2181
+      protocol: TCP
+    - name: follower
+      port: 2888
+      protocol: TCP
+    - name: leader
+      port: 3888
+      protocol: TCP
   selector:
     app: zookeeper
