--- a/kafka/zookeeper-svc.yaml
+++ b/kafka/zookeeper-svc.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: zookeeper-svc
+  name: zookeeper-service
+  namespace: kafka
 spec:
   ports:
     - name: client
