--- a/kafka/kafka-deploy.yaml
+++ b/kafka/kafka-deploy.yaml
@@ -16,14 +16,16 @@ spec:
       hostname: kafka-broker
       containers:
         - env:
-            - name: KAFKA_BROKER_ID
-              value: "1"
+            - name: KAFKA_ADVERTISED_PORT
+              value: "30718"
+            - name: KAFKA_ADVERTISED_HOST_NAME
+              value: 192.168.1.240
             - name: KAFKA_ZOOKEEPER_CONNECT
               value: 10.99.172.23:2181
-            - name: KAFKA_LISTENERS
-              value: PLAINTEXT://:9092
-            - name: KAFKA_ADVERTISED_LISTENERS
-              value: PLAINTEXT://kafka-broker:9092
+            - name: KAFKA_BROKER_ID
+              value: "0"
+            - name: KAFKA_CREATE_TOPICS
+              value: admintome-test:1:1
           image: wurstmeister/kafka
           imagePullPolicy: IfNotPresent
           name: kafka-broker
