--- a/kafka/kafka-deploy.yaml
+++ b/kafka/kafka-deploy.yaml
@@ -21,7 +21,7 @@ spec:
             - name: KAFKA_ADVERTISED_HOST_NAME
               value: 192.168.1.240
             - name: KAFKA_ZOOKEEPER_CONNECT
-              value: 10.99.172.23:2181
+              value: zookeeper-service:2181
             - name: KAFKA_BROKER_ID
               value: "0"
             - name: KAFKA_CREATE_TOPICS
