--- a/kafka/zookeeper.yaml
+++ b/kafka/zookeeper.yaml
@@ -1,3 +1,20 @@
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: zookeeper-service
+  name: zookeeper-service
+  namespace: kafka
+spec:
+  type: NodePort
+  ports:
+    - name: zookeeper-port
+      port: 2181
+      nodePort: 30181
+      targetPort: 2181
+  selector:
+    app: zookeeper
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,8 +33,8 @@ spec:
         app: zookeeper
     spec:
       containers:
-        - image: digitalwonderland/zookeeper
+        - image: wurstmeister/zookeeper
           imagePullPolicy: IfNotPresent
           name: zookeeper
           ports:
-            - containerPort: 2181
+             - containerPort: 2181
