--- a/kafka/kafka.yaml
+++ b/kafka/kafka.yaml
@@ -35,6 +35,8 @@ spec:
               value: "1"
             - name: KAFKA_ZOOKEEPER_CONNECT
               value: "10.105.190.203:2181"
+            - name: KAFKA_LISTENERS
+              value: PLAINTEXT://:9092
           image: wurstmeister/kafka
           imagePullPolicy: IfNotPresent
           name: kafka-broker
