--- a/kafka/zookeeper.yaml
+++ b/kafka/zookeeper.yaml
@@ -34,7 +34,12 @@ spec:
     spec:
       containers:
         - image: wurstmeister/zookeeper
+          env:
+            - name: ZOOKEEPER_CLIENT_PORT
+              value: 2181
+            - name: ZOOKEEPER_TICK_TIME
+              value: 2000
           imagePullPolicy: IfNotPresent
           name: zookeeper
           ports:
-             - containerPort: 2181
+            - containerPort: 2181
