--- a/kafka/zookeeper.yaml
+++ b/kafka/zookeeper.yaml
@@ -36,9 +36,9 @@ spec:
         - image: wurstmeister/zookeeper
           env:
             - name: ZOOKEEPER_CLIENT_PORT
-              value: 2181
+              value: "2181"
             - name: ZOOKEEPER_TICK_TIME
-              value: 2000
+              value: "2000"
           imagePullPolicy: IfNotPresent
           name: zookeeper
           ports:
