--- a/istio/ingress-vs.yaml
+++ b/istio/ingress-vs.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: simple-ingress-vs
+  namespace: simple
 spec:
   hosts:
     - "*"
