--- a/istio/ingress-gw.yaml
+++ b/istio/ingress-gw.yaml
@@ -13,3 +13,9 @@ spec:
         protocol: HTTP
       hosts:
         - "*"
+    - port:
+        number: 15021
+        name: http2
+        protocol: HTTP
+      hosts:
+        - "*"
