--- a/kiali/kiali-vs.yaml
+++ b/kiali/kiali-vs.yaml
@@ -14,6 +14,6 @@ spec:
             prefix: /
       route:
         - destination:
-            host: kiali-external-test
+            host: kiali
             port:
               number: 20001
