--- a/istio/ingress-vs.yaml
+++ b/istio/ingress-vs.yaml
@@ -14,6 +14,6 @@ spec:
             prefix: /simple-spring/ip
       route:
         - destination:
-            host: simple-svc
+            host: simple-svc.simple.svc.cluster.local
             port:
               number: 80
