--- a/remote-debug/debug-svc.yaml
+++ b/remote-debug/debug-svc.yaml
@@ -13,3 +13,8 @@ spec:
       port: 8080
       targetPort: 5005
       nodePort: 30505
+    - name: http2
+      protocol: TCP
+      port: 8080
+      targetPort: 8080
+      nodePort: 30504
